# Copyright (c) 2022 Vortex Browser. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

import("//vortex/android/features/tab_ui/vortex_tab_management_java_sources.gni")
import("//vortex/android/feed/vortex_feed_java_sources.gni")
import("//vortex/browser/vortex_ads/android/java_sources.gni")
import("//vortex/browser/share/android/java_sources.gni")
import("//vortex/components/vortex_referrals/buildflags/buildflags.gni")
import("//vortex/components/permissions/android/java_sources.gni")
import("//vortex/components/safetynet/java_sources.gni")
import("//components/feed/features.gni")

vortex_java_sources = [
  "../../vortex/android/java/org/chromium/chrome/browser/VortexAppHooks.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexApplicationImplBase.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexBadge.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexFeatureList.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexHelper.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexIntentHandler.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexLaunchIntentDispatcher.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexRelaunchUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexRewardsBalance.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexRewardsDonationSentActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexRewardsExternalWallet.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexRewardsHelper.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexRewardsNativeWorker.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexRewardsObserver.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexRewardsOnboardingPagerAdapter.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexRewardsPanelPopup.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexRewardsPublisher.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexRewardsSiteBannerActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexRewardsUserWalletActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexRewardsVerifyWalletActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexSyncInformers.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexSyncWorker.java",
  "../../vortex/android/java/org/chromium/chrome/browser/VortexWalletProvider.java",
  "../../vortex/android/java/org/chromium/chrome/browser/CrossPromotionalModalDialogFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/DormantUsersEngagementDialogFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/InternetConnection.java",
  "../../vortex/android/java/org/chromium/chrome/browser/QRCodeShareDialogFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/app/VortexActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/app/appmenu/AppMenuIconRowFooter.java",
  "../../vortex/android/java/org/chromium/chrome/browser/app/appmenu/VortexAppMenuPropertiesDelegateImpl.java",
  "../../vortex/android/java/org/chromium/chrome/browser/app/domain/CryptoModel.java",
  "../../vortex/android/java/org/chromium/chrome/browser/app/domain/CryptoSharedData.java",
  "../../vortex/android/java/org/chromium/chrome/browser/app/domain/KeyringModel.java",
  "../../vortex/android/java/org/chromium/chrome/browser/app/domain/NetworkModel.java",
  "../../vortex/android/java/org/chromium/chrome/browser/app/domain/WalletModel.java",
  "../../vortex/android/java/org/chromium/chrome/browser/appmenu/VortexTabbedAppMenuPropertiesDelegate.java",
  "../../vortex/android/java/org/chromium/chrome/browser/autofill/VortexAutofillPopupBridge.java",
  "../../vortex/android/java/org/chromium/chrome/browser/bookmarks/VortexBookmarkUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vortex_news/VortexNewsAdapterFeedCard.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vortex_news/VortexNewsBottomSheetDialogFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vortex_news/VortexNewsControllerFactory.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vortex_news/VortexNewsUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vortex_news/CardBuilderFeedCard.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vortex_news/LinearLayoutManagerWrapper.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vortex_news/models/FeedItemCard.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vortex_news/models/FeedItemsCard.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vortex_stats/VortexStatsBottomSheetDialogFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vortex_stats/VortexStatsUtil.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/AssetRatioServiceFactory.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/BlockchainRegistryFactory.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/VortexWalletProviderDelegateImplHelper.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/VortexWalletServiceFactory.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/JsonRpcServiceFactory.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/KeyringServiceFactory.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/SwapServiceFactory.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/TxServiceFactory.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/activities/AccountDetailActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/activities/AccountDetailsWithQrActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/activities/AccountPrivateKeyActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/activities/AccountSelectorActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/activities/AddAccountActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/activities/AdvanceTxSettingActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/activities/AssetDetailActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/activities/VortexWalletActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/activities/VortexWalletBaseActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/activities/VortexWalletDAppsActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/activities/BuySendSwapActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/activities/NetworkSelectorActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/AccountSpinnerAdapter.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/ApproveTxFragmentPageAdapter.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/CryptoFragmentPageAdapter.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/CryptoWalletOnboardingPagerAdapter.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/FragmentNavigationItemAdapter.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/NetworkSelectorAdapter.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/NetworkSpinnerAdapter.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/RecoveryPhraseAdapter.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/SignMessagePagerAdapter.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/TwoLineItemRecyclerViewAdapter.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/adapters/WalletCoinAdapter.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/controller/DAppsWalletController.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/AccountsFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/ApproveTxBottomSheetDialogFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/EditVisibleAssetsBottomSheetDialogFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/PortfolioFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/SwapBottomSheetDialogFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/TwoLineItemFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/TxDetailsFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/TxFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/dapps/AddSwitchChainNetworkFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/dapps/AddTokenFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/dapps/BaseDAppsBottomSheetDialogFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/dapps/BaseDAppsFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/dapps/ConnectAccountFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/dapps/DAppsMessageFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/dapps/SignMessageFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/BackupWalletFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/CryptoOnboardingFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/RecoveryPhraseFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/RestoreWalletFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/SecurePasswordFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/SetupWalletFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/UnlockWalletFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/onboarding_fragments/VerifyRecoveryPhraseFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/listeners/OnNextPage.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/listeners/OnWalletListItemClick.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/listeners/TransactionConfirmationListener.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/modal/VortexWalletPanel.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/modal/DAppsDialog.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/model/TxNonSwipeableViewPager.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/model/WalletListItemModel.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/observers/ApprovedTxObserver.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/observers/KeyringServiceObserver.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/observers/TxServiceObserver.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/observers/WalletMojoObserverBase.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/permission/VortexEthereumPermissionAccountsListAdapter.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/permission/VortexEthereumPermissionPromptDialog.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/util/AccountsPermissionsHelper.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/util/AndroidUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/util/AssetsPricesHelper.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/util/AsyncUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/util/Blockies.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/util/ItemOffsetDecoration.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/util/KeystoreHelper.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/util/NavigationItem.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/util/PendingTxHelper.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/util/PortfolioHelper.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/util/SingleTokenBalanceHelper.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/util/SmoothLineChartEquallySpaced.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/util/TokenUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/util/Utils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/util/Validations.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/util/WalletConstants.java",
  "../../vortex/android/java/org/chromium/chrome/browser/crypto_wallet/util/WalletNativeUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/custom_layout/HeightWrappingViewPager.java",
  "../../vortex/android/java/org/chromium/chrome/browser/custom_layout/NonSwipeableViewPager.java",
  "../../vortex/android/java/org/chromium/chrome/browser/custom_layout/VerticalViewPager.java",
  "../../vortex/android/java/org/chromium/chrome/browser/custom_layout/popup_window_tooltip/ArrowColorDrawable.java",
  "../../vortex/android/java/org/chromium/chrome/browser/custom_layout/popup_window_tooltip/PopupWindowTooltip.java",
  "../../vortex/android/java/org/chromium/chrome/browser/custom_layout/popup_window_tooltip/PopupWindowTooltipUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/decentralized_dns/settings/ENSSettingsFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/decentralized_dns/settings/RadioButtonGroupENSResolveMethodPreference.java",
  "../../vortex/android/java/org/chromium/chrome/browser/decentralized_dns/settings/RadioButtonGroupUnstoppableDomainsResolveMethodPreference.java",
  "../../vortex/android/java/org/chromium/chrome/browser/decentralized_dns/settings/UnstoppableDomainsSettingsFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/document/VortexLauncherActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/download/VortexMimeUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/download/settings/VortexDownloadSettings.java",
  "../../vortex/android/java/org/chromium/chrome/browser/externalnav/VortexExternalNavigationHandler.java",
  "../../vortex/android/java/org/chromium/chrome/browser/feedback/VortexHelpAndFeedbackLauncherImpl.java",
  "../../vortex/android/java/org/chromium/chrome/browser/firstrun/VortexFirstRunFlowSequencer.java",
  "../../vortex/android/java/org/chromium/chrome/browser/firstrun/VortexFreIntentCreator.java",
  "../../vortex/android/java/org/chromium/chrome/browser/firstrun/P3aOnboardingActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/help/VortexHelpAndFeedbackLauncher.java",
  "../../vortex/android/java/org/chromium/chrome/browser/homepage/VortexHomepageManager.java",
  "../../vortex/android/java/org/chromium/chrome/browser/homepage/settings/VortexHomepageSettings.java",
  "../../vortex/android/java/org/chromium/chrome/browser/infobar/VortexInfoBarIdentifier.java",
  "../../vortex/android/java/org/chromium/chrome/browser/informers/VortexAndroidSyncDisabledInformer.java",
  "../../vortex/android/java/org/chromium/chrome/browser/language/settings/VortexLanguageSettings.java",
  "../../vortex/android/java/org/chromium/chrome/browser/local_database/VortexStatsTable.java",
  "../../vortex/android/java/org/chromium/chrome/browser/local_database/DatabaseHelper.java",
  "../../vortex/android/java/org/chromium/chrome/browser/local_database/DisplayAdsTable.java",
  "../../vortex/android/java/org/chromium/chrome/browser/local_database/SavedBandwidthTable.java",
  "../../vortex/android/java/org/chromium/chrome/browser/local_database/TopSiteTable.java",
  "../../vortex/android/java/org/chromium/chrome/browser/night_mode/settings/VortexRadioButtonGroupThemePreference.java",
  "../../vortex/android/java/org/chromium/chrome/browser/night_mode/settings/VortexThemePreferences.java",
  "../../vortex/android/java/org/chromium/chrome/browser/notifications/VortexNotificationPlatformBridge.java",
  "../../vortex/android/java/org/chromium/chrome/browser/notifications/VortexNotificationSettingsBridge.java",
  "../../vortex/android/java/org/chromium/chrome/browser/notifications/VortexOnboardingNotification.java",
  "../../vortex/android/java/org/chromium/chrome/browser/notifications/retention/RetentionNotification.java",
  "../../vortex/android/java/org/chromium/chrome/browser/notifications/retention/RetentionNotificationPublisher.java",
  "../../vortex/android/java/org/chromium/chrome/browser/notifications/retention/RetentionNotificationUtil.java",
  "../../vortex/android/java/org/chromium/chrome/browser/ntp/VortexNewTabPage.java",
  "../../vortex/android/java/org/chromium/chrome/browser/ntp/VortexNewTabPageLayout.java",
  "../../vortex/android/java/org/chromium/chrome/browser/ntp/IncognitoNewTabPageView.java",
  "../../vortex/android/java/org/chromium/chrome/browser/ntp_background_images/NTPBackgroundImagesBridge.java",
  "../../vortex/android/java/org/chromium/chrome/browser/ntp_background_images/RewardsBottomSheetDialogFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/ntp_background_images/model/BackgroundImage.java",
  "../../vortex/android/java/org/chromium/chrome/browser/ntp_background_images/model/ImageCredit.java",
  "../../vortex/android/java/org/chromium/chrome/browser/ntp_background_images/model/NTPImage.java",
  "../../vortex/android/java/org/chromium/chrome/browser/ntp_background_images/model/SponsoredLogo.java",
  "../../vortex/android/java/org/chromium/chrome/browser/ntp_background_images/model/SponsoredTab.java",
  "../../vortex/android/java/org/chromium/chrome/browser/ntp_background_images/model/TopSite.java",
  "../../vortex/android/java/org/chromium/chrome/browser/ntp_background_images/model/Wallpaper.java",
  "../../vortex/android/java/org/chromium/chrome/browser/ntp_background_images/util/FetchWallpaperWorkerTask.java",
  "../../vortex/android/java/org/chromium/chrome/browser/ntp_background_images/util/NTPUtil.java",
  "../../vortex/android/java/org/chromium/chrome/browser/ntp_background_images/util/NewTabPageListener.java",
  "../../vortex/android/java/org/chromium/chrome/browser/ntp_background_images/util/SponsoredImageUtil.java",
  "../../vortex/android/java/org/chromium/chrome/browser/onboarding/VortexRewardsOnboardingFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/onboarding/VortexTalkOptInPopup.java",
  "../../vortex/android/java/org/chromium/chrome/browser/onboarding/VortexTalkOptInPopupListener.java",
  "../../vortex/android/java/org/chromium/chrome/browser/onboarding/OnViewPagerAction.java",
  "../../vortex/android/java/org/chromium/chrome/browser/onboarding/OnboardingActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/onboarding/OnboardingPrefManager.java",
  "../../vortex/android/java/org/chromium/chrome/browser/onboarding/OnboardingViewPagerAdapter.java",
  "../../vortex/android/java/org/chromium/chrome/browser/onboarding/SearchActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/onboarding/SearchEngineEnum.java",
  "../../vortex/android/java/org/chromium/chrome/browser/onboarding/SearchEngineOnboardingFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/onboarding/TroubleshootingOnboardingFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/onboarding/v2/HighlightDialogFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/onboarding/v2/HighlightItem.java",
  "../../vortex/android/java/org/chromium/chrome/browser/onboarding/v2/HighlightView.java",
  "../../vortex/android/java/org/chromium/chrome/browser/onboarding/v2/OnboardingV2Fragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/onboarding/v2/OnboardingV2PagerAdapter.java",
  "../../vortex/android/java/org/chromium/chrome/browser/partnercustomizations/CloseVortexManager.java",
  "../../vortex/android/java/org/chromium/chrome/browser/password_manager/settings/VortexPasswordSettingsBase.java",
  "../../vortex/android/java/org/chromium/chrome/browser/preferences/VortexPrefServiceBridge.java",
  "../../vortex/android/java/org/chromium/chrome/browser/preferences/VortexPreferenceKeys.java",
  "../../vortex/android/java/org/chromium/chrome/browser/preferences/website/VortexShieldsContentSettings.java",
  "../../vortex/android/java/org/chromium/chrome/browser/preferences/website/VortexShieldsContentSettingsObserver.java",
  "../../vortex/android/java/org/chromium/chrome/browser/privacy/settings/VortexPrivacySettings.java",
  "../../vortex/android/java/org/chromium/chrome/browser/qrreader/BarcodeTracker.java",
  "../../vortex/android/java/org/chromium/chrome/browser/qrreader/BarcodeTrackerFactory.java",
  "../../vortex/android/java/org/chromium/chrome/browser/qrreader/CameraSource.java",
  "../../vortex/android/java/org/chromium/chrome/browser/qrreader/CameraSourcePreview.java",
  "../../vortex/android/java/org/chromium/chrome/browser/query_tiles/VortexQueryTileSection.java",
  "../../vortex/android/java/org/chromium/chrome/browser/rate/RateDialogFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/rate/RateFeedbackUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/rate/RateUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/rewards/VortexRewardsPanel.java",
  "../../vortex/android/java/org/chromium/chrome/browser/safe_browsing/settings/VortexStandardProtectionSettingsFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/set_default_browser/VortexSetDefaultBrowserUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/set_default_browser/OnVortexSetDefaultBrowserListener.java",
  "../../vortex/android/java/org/chromium/chrome/browser/set_default_browser/SetDefaultBrowserActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/set_default_browser/SetDefaultBrowserBottomSheetFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/AppearancePreferences.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/BackgroundImagesPreferences.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexCustomTabsPreference.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexDialogPreference.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexLicensePreference.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexLicensePreferences.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexMainPreferencesBase.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexNewsCategorySources.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexNewsPreferences.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexPreferenceDialogFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexPreferenceFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexRewardsPreferences.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexRewardsResetPreference.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexRewardsResetPreferenceDialog.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexSearchEngineUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexSearchEnginesPreferences.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexSettingsActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexSettingsLauncherImpl.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexStatsPreferences.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexSyncScreensPreference.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexVpnPreferences.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexVpnServerSelectionPreferences.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexWalletAddNetworksFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexWalletAutoLockPreferences.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexWalletNetworksPreference.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexWalletNetworksPreferenceFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexWalletPreferences.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexWalletResetPreference.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexWalletResetTxHistoryAndNoncePreference.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexWebrtcPolicyPreference.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VortexWebrtcPolicyPreferencesFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/NetworkListBaseAdapter.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/SearchEngineTabModelSelectorObserver.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/SearchPreference.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/VpnCalloutPreference.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/developer/VortexQAPreferences.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/developer/VortexRewardsDebugPreferences.java",
  "../../vortex/android/java/org/chromium/chrome/browser/settings/themes/VortexRadioButtonGroupCustomHomepageThemePreference.java",
  "../../vortex/android/java/org/chromium/chrome/browser/share/VortexShareDelegateImpl.java",
  "../../vortex/android/java/org/chromium/chrome/browser/shields/VortexShieldsHandler.java",
  "../../vortex/android/java/org/chromium/chrome/browser/shields/VortexShieldsMenuObserver.java",
  "../../vortex/android/java/org/chromium/chrome/browser/shields/VortexShieldsUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/shields/ShieldsTooltipEnum.java",
  "../../vortex/android/java/org/chromium/chrome/browser/signin/VortexSigninManager.java",
  "../../vortex/android/java/org/chromium/chrome/browser/site_settings/VortexSiteSettingsDelegate.java",
  "../../vortex/android/java/org/chromium/chrome/browser/site_settings/DesktopModePreferences.java",
  "../../vortex/android/java/org/chromium/chrome/browser/site_settings/PlayYTVideoInBrowserPreferences.java",
  "../../vortex/android/java/org/chromium/chrome/browser/suggestions/tile/VortexTileView.java",
  "../../vortex/android/java/org/chromium/chrome/browser/sync/VortexSyncDevices.java",
  "../../vortex/android/java/org/chromium/chrome/browser/sync/settings/VortexManageSyncSettings.java",
  "../../vortex/android/java/org/chromium/chrome/browser/tabmodel/VortexTabCreator.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/VortexHomeButton.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/VortexIncognitoToggleTabLayout.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/VortexToolbarManager.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/bottom/BookmarksButton.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomTabSwitcherActionMenuCoordinator.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarConfiguration.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarCoordinator.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarNewTabButton.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarVariationManager.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/bottom/VortexBottomControlsCoordinator.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/bottom/VortexScrollingBottomViewResourceFrameLayout.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarCoordinator.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarLinearLayout.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarMediator.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarModel.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarViewBinder.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/bottom/SearchAccelerator.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/bottom/ShareButton.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarCoordinator.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarMediator.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarModel.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarViewBinder.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/menu_button/VortexMenuButtonCoordinator.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/top/VortexTabSwitcherModeTTCoordinator.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/top/VortexTabSwitcherModeTopToolbar.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/top/VortexToolbarLayoutImpl.java",
  "../../vortex/android/java/org/chromium/chrome/browser/toolbar/top/VortexTopToolbarCoordinator.java",
  "../../vortex/android/java/org/chromium/chrome/browser/ui/vortex_tricks/checkbox_to_switch/CheckBoxPreference.java",
  "../../vortex/android/java/org/chromium/chrome/browser/ui/messages/infobar/VortexSimpleConfirmInfoBarBuilder.java",
  "../../vortex/android/java/org/chromium/chrome/browser/upgrade/VortexPackageReplacedBroadcastReceiver.java",
  "../../vortex/android/java/org/chromium/chrome/browser/upgrade/VortexUpgradeJobIntentServiceImpl.java",
  "../../vortex/android/java/org/chromium/chrome/browser/upgrade/NotificationIntent.java",
  "../../vortex/android/java/org/chromium/chrome/browser/util/VortexConstants.java",
  "../../vortex/android/java/org/chromium/chrome/browser/util/VortexDbUtil.java",
  "../../vortex/android/java/org/chromium/chrome/browser/util/ConfigurationUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/util/ImageUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/util/PackageUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/util/TabUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/VortexVpnNativeWorker.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/VortexVpnObserver.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/activities/VortexVpnParentActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/activities/VortexVpnPlansActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/activities/VortexVpnProfileActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/activities/VortexVpnSupportActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/adapters/VortexVpnPlanPagerAdapter.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/adapters/VortexVpnServerSelectionAdapter.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/fragments/VortexVpnAlwaysOnErrorDialogFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/fragments/VortexVpnCalloutDialogFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/fragments/VortexVpnConfirmDialogFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/fragments/VortexVpnDialogFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/models/VortexVpnPrefModel.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/models/VortexVpnProfileCredentials.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/models/VortexVpnServerRegion.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/models/VortexVpnWireguardProfileCredentials.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/utils/VortexVpnApiResponseUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/utils/VortexVpnPrefUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/utils/VortexVpnProfileUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/utils/VortexVpnUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/utils/InAppPurchaseWrapper.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/wireguard/TunnelModel.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/wireguard/WireguardConfigUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/wireguard/WireguardServiceImpl.java",
  "../../vortex/android/java/org/chromium/chrome/browser/vpn/wireguard/WireguardUtils.java",
  "../../vortex/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceAccountBalance.java",
  "../../vortex/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceActivity.java",
  "../../vortex/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceBuyFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceCoinNetworks.java",
  "../../vortex/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceConvert.java",
  "../../vortex/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceConvertFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceDepositFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceNativeWorker.java",
  "../../vortex/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceObserver.java",
  "../../vortex/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceSpinnerAdapter.java",
  "../../vortex/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceSummaryFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceWidgetManager.java",
  "../../vortex/android/java/org/chromium/chrome/browser/widget/crypto/binance/CoinNetworkModel.java",
  "../../vortex/android/java/org/chromium/chrome/browser/widget/crypto/binance/ConvertAsset.java",
  "../../vortex/android/java/org/chromium/chrome/browser/widget/crypto/binance/CryptoWidgetBottomSheetDialogFragment.java",
  "../../vortex/android/java/org/chromium/chrome/browser/widget/crypto/binance/CryptoWidgetTabAdapter.java",
]

vortex_java_sources += vortex_ads_java_sources
vortex_java_sources += vortex_rewards_java_sources
vortex_java_sources += vortex_feed_java_sources
vortex_java_sources += vortex_public_tab_management_java_sources
vortex_java_sources += vortex_share_java_sources

if (enable_vortex_referrals) {
  vortex_java_sources += [ "../../vortex/android/java/org/chromium/chrome/browser/util/VortexReferrer.java" ]
}

vortex_browser_ui_android_appmenu_internal_sources = [
  "//vortex/browser/ui/android/appmenu/internal/java/src/org/chromium/chrome/browser/ui/appmenu/VortexAppMenu.java",
  "//vortex/browser/ui/android/default_browser_promo/java/src/org/chromium/chrome/browser/ui/default_browser_promo/VortexDefaultBrowserPromoUtils.java",
]

vortex_browser_ui_android_toolbar_sources = [
  "//vortex/browser/ui/android/toolbar/java/src/org/chromium/chrome/browser/toolbar/bottom/VortexBottomControlsMediator.java",
  "//vortex/browser/ui/android/toolbar/java/src/org/chromium/chrome/browser/toolbar/top/VortexToolbarLayout.java",
]

vortex_java_base_sources = [
  "//vortex/android/java/org/chromium/base/VortexCommandLineInitUtil.java",
  "//vortex/android/java/org/chromium/base/VortexReflectionUtil.java",
]

vortex_java_base_module_sources = [
  "//vortex/android/java/org/chromium/chrome/browser/base/SplitCompatJobIntentService.java",
  "//vortex/android/java/org/chromium/chrome/browser/upgrade/VortexUpgradeJobIntentService.java",
  "//vortex/android/java/org/chromium/chrome/browser/vpn/wireguard/WireguardService.java",
]

vortex_java_base_module_deps = [
  "//vortex/third_party/android_deps:com_wireguard_android_java",
  "//third_party/androidx:androidx_core_core_java",
]
