# Copyright 2022 Vortex Browser. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

vortex_feed_java_sources = [
  "//vortex/android/feed/core/java/src/org/chromium/chrome/browser/feed/VortexFeedSurfaceCoordinator.java",
  "//vortex/android/feed/core/java/src/org/chromium/chrome/browser/feed/VortexFeedSurfaceMediator.java",
]
